--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </ul>
             </nav>
     </header>
+    
     <main class="mainIndex">
         <section class="carrusel">
             <div class="contenedor">
@@ -52,7 +53,7 @@
                 <div class="cardDescripcion">
                     <h2>Conocenos</h2>
                     <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                    <button >
+                    <button class="boton-home">
                     <a href="/contacto.html">Conctáctanos</a>
                     </button>
                 </div>
@@ -62,24 +63,40 @@
 
         <section class="cardContenedor">
             <div class="card">
-                <img src="./imagen/submarino.jpg" alt="">
+                <img src="./imagen/brunch.jpg" alt="">
                 <h2>Delicias</h2>
                 <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                <button >
-                    <a href="/contacto.html" class="contactoHome">Conctáctanos</a>
+                <button class="boton-home">
+                    <a href="/contacto.html">Conctáctanos</a>
                 </button>
             </div>
             <div class="card">
-                <img src="./imagen/brunch.jpg" alt="">
+                <img src="./imagen/submarinoTostado.jpg" alt="">
                 <h2>Bebidas</h2>
                 <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                <button >
-                    <a href="/contacto.html"class="contactoHome">Conctáctanos</a>
+                <button class="boton-home">
+                    <a href="/contacto.html">Conctáctanos</a>
                 </button>
             </div>
+        </section>
 
+        <section class="container">
+            <figure class="cardNosotros">
+
+                <div class="cardDescripcion">
+                    <h2>Conocenos</h2>
+                    <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
+                    <button class="boton-home">
+                    <a href="/contacto.html">Conctáctanos</a>
+                    </button>
+                </div>
+                <div class="cardImagen">
+                    <img src="./imagen/cafe.jpg" alt="">
+                </div>
+            </figure>
             
         </section>
+
 
     </main>
     <footer>
@@ -91,8 +108,8 @@
                 <a href="mailito:elorigenpuertopiramides@gmail.com" class="navLink"><span class="iconify" data-icon="ci:mail" data-inline="false"></span></a></li>
             </div>
         </section>
-        <a href="index.html" class="logo-footer nav-link">
-            <img src="./imagen/logoVectoral.png" alt="logo" class="logoOrigen">
+        <a href="index.html">
+            <img src="./imagen/logoVectoral.png" alt="logo" class="logo-footer">
         </a>
     </footer>
 </div>
