--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                 </div>
                 <img src="/imagen/brunchMesa.jpg" alt="" id="imagen">
             </div>
-
         </section>
         
         <section class="container">
@@ -51,9 +50,9 @@
                     <img src="./imagen/sandwich.jpg" alt="">
                 </div>
                 <div class="cardDescripcion">
-                    <h2>Conocenos</h2>
-                    <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                    <button class="boton-home">
+                    <h2>Conocenos Mejor</h2>
+                    <p id="parrafo-card">Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
+                    <button id="botonHome"s>
                     <a href="/contacto.html">Conctáctanos</a>
                     </button>
                 </div>
@@ -66,17 +65,12 @@
                 <img src="./imagen/brunch.jpg" alt="">
                 <h2>Delicias</h2>
                 <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                <button class="boton-home">
-                    <a href="/contacto.html">Conctáctanos</a>
-                </button>
             </div>
             <div class="card">
                 <img src="./imagen/submarinoTostado.jpg" alt="">
                 <h2>Bebidas</h2>
                 <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                <button class="boton-home">
-                    <a href="/contacto.html">Conctáctanos</a>
-                </button>
+
             </div>
         </section>
 
@@ -84,9 +78,9 @@
             <figure class="cardNosotros">
 
                 <div class="cardDescripcion">
-                    <h2>Conocenos</h2>
-                    <p>Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
-                    <button class="boton-home">
+                    <h2>Nuestro Café</h2>
+                    <p id="parrafo-card">Te Contamos un poco más lo que Buscamos Transmitir. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis eius atque explicabo voluptatibus odit dolorem blanditiis, alias recusandae voluptatem numquam accusamus nemo soluta temporibus dolores hic ad perferendis maxime laboriosam.</p>
+                    <button id="botonHome">
                     <a href="/contacto.html">Conctáctanos</a>
                     </button>
                 </div>
@@ -96,6 +90,17 @@
             </figure>
             
         </section>
+        <section>
+            <div id="informacion-home">
+                <h3>El Origen</h3>
+                <p>Primer Bajada al Mar.</p>
+                <p>Puerto Pirámides</p>
+                <span class="iconify" data-icon="bx:bx-beer" id="beer"></span>
+
+            </div>
+
+        </section>
+
 
 
     </main>
@@ -109,7 +114,7 @@
             </div>
         </section>
         <a href="index.html">
-            <img src="./imagen/logoVectoral.png" alt="logo" class="logo-footer">
+            <img src="./imagen/logoVectoral.png" alt="logo" id="img-logo">
         </a>
     </footer>
 </div>
