--- a/contacto.html
+++ b/contacto.html
@@ -23,42 +23,36 @@
                     <span class="iconify" data-icon="icon-park-outline:croissant" style="color: white;" data-flip="horizontal"></span>
                 </button>
                 <ul class="menu-ul">
-                    <li class="nav-menu-item"><a href="index.html" class="nav-menu-link nav-link">Home</a></li>
+                    <li class="nav-menu-item"><a href="index.html" class="nav-menu-link_active nav-link">Home</a></li>
                     <li class="nav-menu-item"><a href="nosotros.html" class="nav-menu-link nav-link">Nosotros</a></li>
                     <li class="nav-menu-item"><a href="menu.html" class="nav-menu-link nav-link">Menu</a></li>
-                    <li class="nav-menu-item"><a href="contacto.html" class="nav-menu-link_active nav-link">Contacto</a></li>
+                    <li class="nav-menu-item"><a href="contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
                 </ul>
             </nav>
     </header>
-    <main>
-        <section class="carrusel">
-            <div class="contenedor">
-                <div class="atras botones">
-                    &#60
-                </div>
-                <div class="adelante botones">
-                    &#62
-                </div>
-                <img src="/imagen/brunchMesa.jpg" alt="" id="imagen">
+    
+    <main class="mainIndex">
+            <h1 class="st-c">Contacto</h1>
+            <div id="formulario-caja">
+                <form action="" class="form-contact">
+                    <label for="name">Nombre</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Correo electronico</label>
+                    <input type="email" id="email" name="email" required>			
+                    <label for="comment">Dejanos tu consulta</label>
+                    <textarea name="comment" id="comment" required></textarea>
+                    <button type="submit" class="btn-contacto btn-pri">Enviar</button>
+                </form>
+                <div id="imagen-formulario">
+                    <img src="./imagen/tortaDulce.jpg" alt="">
+                </div> 
             </div>
-
-        </section>
-        
-        <section class="cardHome">
-            <div class="card">
-                <img src="./imagen/sandwich.jpg" alt="">
-                <h2>Conocenos</h2>
-                <p>Te Contamos un poco más lo que Buscamos Transmitir</p>
-                <button >
-                    <a href="/contacto.html">Conctáctanos</a>
-                </button>
-            </div>
-        </section>
-        <section >
-            <div class="cardHome">
-
-            </div>
-        </section>
+            <div id="informacion-home">
+                <h3>El Origen</h3>
+                <p>Primer Bajada al Mar.</p>
+                <p>Puerto Pirámides</p>
+                <span class="iconify" data-icon="bx:bx-beer" id="beer"></span>
+        </div>
 
     </main>
     <footer>
@@ -70,8 +64,8 @@
                 <a href="mailito:elorigenpuertopiramides@gmail.com" class="navLink"><span class="iconify" data-icon="ci:mail" data-inline="false"></span></a></li>
             </div>
         </section>
-        <a href="index.html" class="logo-footer nav-link">
-            <img src="./imagen/logoVectoral.png" alt="logo" class="logoOrigen">
+        <a href="index.html">
+            <img src="./imagen/logoVectoral.png" alt="logo" id="img-logo">
         </a>
     </footer>
 </div>
