--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="adelante botones">
                     &#62
                 </div>
-                <img src="/imagen/brunchMesa.jpg" alt="" id="imagen">
+                <img src="https://github.com/Camilacurtizmud/origenpuertopiramides/blob/main/imagen/brunchoDos.jpg?raw=true" alt="" id="imagen">
             </div>
         </section>
         
